--- a/Cafe_Bot.html
+++ b/Cafe_Bot.html
@@ -25,11 +25,11 @@
 <main id="cbot" style="text-align: center;">
 <h1 id="cafe_bot">Cafe_Bot</h1>
 <p><img src="https://user-images.githubusercontent.com/83626443/118020079-91aed400-b30e-11eb-83ed-f88fa81dc51c.png" alt="Cafe Bot-logos"></p>
-<section>
+<section style="color: #82b8ff;">
   <h2 id="motivation">Motivation</h2>
     <p>Our motivation to make this bot came from a small build-up of frustration at other discord bots. They only did specific things, and you had to add multiple of them to make a good server with good bots. A friend and I both shared this belief. We decided that we should make our own discord bot, to cure other people of this frustration. So, that&#39;s what we&#39;ve done! This is a combination of many attributes of many popular bots. Now, half your server-space doesn&#39;t get taken up by bots! You just have to add 1!</p>
 </section>
-<section>
+<section style="color: #82b8ff;">
   <h2 id="features">Features</h2>
     <p>This is an all-around Discord Bot, with many features, such as:</p>
     <ul>
@@ -53,14 +53,14 @@
     <p><a href="https://discord.com/oauth2/authorize?client_id=832409595791409242&amp;permissions=8&amp;scope=bot">Invite The Bot to Your Server!</a></p>
     <p>Inviting it would mean a ton to me, the main developer of this bot, to see it in a public server, so please add it! 😁</p>
 </section>
-<section>
+<section style="color: #82b8ff;">
   <h2 id="prerequisites">Prerequisites</h2>
     <p>Mainly a bunch of pip installs, for the project to work.</p>
     <p>Python 3.6+</p>
     <p>A working Text Editor or IDE.</p>
     <p>and then merely <code>pip install -U -r requirements.txt</code>.</p>
 </section>
-<section>
+<section style="color: #82b8ff;">
   <h2 id="usage">Usage</h2>
     <p>Many of you that have come across this page, probably want to use this code for yourself. ⚡ NEWS FLASH ⚡, many people that just take things from a person&#39;s github and use it for themselves and they DON&#39;T GIVE CREDIT! If you want to us it properly, then you have to give credit to this github page, and all the contributors.</p>
     <p>Well, anyway, to use it, there will be certain things you will have to replace in your code, as well as required prerequisites (mentioned above), in order for the code to work properly.</p>
@@ -74,14 +74,14 @@
     <li>And that should be it for prerequisites and installations.</li>
     </ul>
 </section>
-<section>
+<section style="color: #82b8ff;">
   <h2 id="current-build-status">Current Build Status</h2>
     <ul>
     <li>@MilkshakeTheCoder - (Possible ModLog???, Cleanup)</li>
     <li>@Andrewthederp - (Currency System Upgrades, Overall better feel.)</li>
     </ul>
 </section>
-<section>
+<section style="color: #82b8ff;">
   <h2 id="main-technologies-used">Main Technologies Used</h2>
     <ul>
     <li>Python 3.8+</li>
@@ -92,14 +92,14 @@
     <li>UpTimeRobot</li>
     </ul>
 </section>
-<section>
+<section style="color: #82b8ff;">
   <h2 id="after-that-">After that...</h2>
     <ul>
     <li>You should be free to run the code and have a fully functioning bot! If there are problems with our explanation and/code, please be sure to let us know in the discussion below! Also, be sure to join our server!</li>
     </ul>
     <p><a href="https://discord.gg/CtNTUX4znA">Join our Discord Server!</a></p>
 </section>
-<section>
+<section style="color: #82b8ff;">
   <h2 id="credits-and-acknowledgments">Credits and Acknowledgments</h2>
   <p>Code With Swastik¹ ⠀⍿ ⠀<a href="https://github.com/CodeWithSwastik">Github</a> · <a href="https://www.youtube.com/c/CodeWithSwastik/featured">Youtube</a></p>
   <p>MenuDocs² ⠀⍿ ⠀<a href="https://github.com/MenuDocs">Github</a> · <a href="https://www.youtube.com/channel/UCpGGFqJP9vYvzFudqnQ-6IA">Youtube</a></p>
