--- a/Cafe_Bot.html
+++ b/Cafe_Bot.html
@@ -22,7 +22,7 @@
       </nav>
     </div>
 </header>
-<main id="cbot" style="text-align: center;">
+<main id="cbot">
 <h1 id="cafe_bot">Cafe_Bot</h1>
 <p><img src="https://user-images.githubusercontent.com/83626443/118020079-91aed400-b30e-11eb-83ed-f88fa81dc51c.png" alt="Cafe Bot-logos"></p>
 <section style="color: #82b8ff;">
