--- a/Cafe_Bot.html
+++ b/Cafe_Bot.html
@@ -13,11 +13,11 @@
       <h1 class="logo"></h1>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="repos.html">Repos</a></li>
-          <li><a href="experiences.html">Experiences</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <p><a href="index.html">Home</a></p>
+          <p><a href="about.html">About</a></p>
+          <p><a href="repos.html">Repos</a></p>
+          <p><a href="experiences.html">Experiences</a></p>
+          <p><a href="contact.html">Contact</a></p>
         </ul>
       </nav>
     </div>
@@ -33,22 +33,22 @@
   <h2 id="features">Features</h2>
     <p>This is an all-around Discord Bot, with many features, such as:</p>
     <ul>
-    <li>AI-Chat System¹</li>
-    <li>Currency System¹</li>
-    <li>Error Handler³</li>
-    <li>Giveaway System³</li>
-    <li>Custom Help Command (Not the ugly orginal bot-rendered one.)⁴</li>
-    <li>A Welcoming and Leaving System³</li>
-    <li>Moderation Commands³</li>
-    <li>A Polling System³</li>
-    <li>Eval &amp; Stat Commands²</li>
-    <li>A Leveling System³</li>
-    <li>Reaction-Roles²</li>
-    <li>Admin-Only Commands³</li>
-    <li>A Calculator System³</li>
-    <li>A Suggestion System with Upvotes and Downvotes³</li>
-    <li>A setchannel command where you can set certain channels in your server!³</li>
-    <li>and much more!</li>
+    <p>AI-Chat System¹</p>
+    <p>Currency System¹</p>
+    <p>Error Handler³</p>
+    <p>Giveaway System³</p>
+    <p>Custom Help Command (Not the ugly orginal bot-rendered one.)⁴</p>
+    <p>A Welcoming and Leaving System³</p>
+    <p>Moderation Commands³</p>
+    <p>A Polling System³</p>
+    <p>Eval &amp; Stat Commands²</p>
+    <p>A Leveling System³</p>
+    <p>Reaction-Roles²</p>
+    <p>Admin-Only Commands³</p>
+    <p>A Calculator System³</p>
+    <p>A Suggestion System with Upvotes and Downvotes³</p>
+    <p>A setchannel command where you can set certain channels in your server!³</p>
+    <p>and much more!</p>
     </ul>
     <p><a href="https://discord.com/oauth2/authorize?client_id=832409595791409242&amp;permissions=8&amp;scope=bot">Invite The Bot to Your Server!</a></p>
     <p>Inviting it would mean a ton to me, the main developer of this bot, to see it in a public server, so please add it! 😁</p>
@@ -71,31 +71,31 @@
     <p><a href="SECRETS.md">The 3 ways... (<strong>VERY</strong> IMPORTANT)</a></p>
     <p>After that, there will be some [small things] to replace in the code, to make sure it still works.</p>
     <ul>
-    <li>And that should be it for prerequisites and installations.</li>
+    <p>And that should be it for prerequisites and installations.</p>
     </ul>
 </section>
 <section style="color: #82b8ff; text-align: center;">
   <h2 id="current-build-status">Current Build Status</h2>
     <ul>
-    <li>@MilkshakeTheCoder - (Possible ModLog???, Cleanup)</li>
-    <li>@Andrewthederp - (Currency System Upgrades, Overall better feel.)</li>
+    <p>@MilkshakeTheCoder - (Possible ModLog???, Cleanup)</p>
+    <p>@Andrewthederp - (Currency System Upgrades, Overall better feel.)</p>
     </ul>
 </section>
 <section style="color: #82b8ff; text-align: center;">
   <h2 id="main-technologies-used">Main Technologies Used</h2>
     <ul>
-    <li>Python 3.8+</li>
-    <li>Discord</li>
-    <li>Discord.py</li>
-    <li>Github</li>
-    <li>Replit</li>
-    <li>UpTimeRobot</li>
+    <p>Python 3.8+</p>
+    <p>Discord</p>
+    <p>Discord.py</p>
+    <p>Github</p>
+    <p>Replit</p>
+    <p>UpTimeRobot</p>
     </ul>
 </section>
 <section style="color: #82b8ff; text-align: center;">
   <h2 id="after-that-">After that...</h2>
     <ul>
-    <li>You should be free to run the code and have a fully functioning bot! If there are problems with our explanation and/code, please be sure to let us know in the discussion below! Also, be sure to join our server!</li>
+    <p>You should be free to run the code and have a fully functioning bot! If there are problems with our explanation and/code, please be sure to let us know in the discussion below! Also, be sure to join our server!</p>
     </ul>
     <p><a href="https://discord.gg/CtNTUX4znA">Join our Discord Server!</a></p>
 </section>
