--- a/Cafe_Bot.html
+++ b/Cafe_Bot.html
@@ -13,18 +13,18 @@
       <h1 class="logo"></h1>
       <nav>
         <ul>
-          <p><a href="index.html">Home</a></p>
-          <p><a href="about.html">About</a></p>
-          <p><a href="repos.html">Repos</a></p>
-          <p><a href="experiences.html">Experiences</a></p>
-          <p><a href="contact.html">Contact</a></p>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="repos.html">Repos</a></li>
+          <li><a href="experiences.html">Experiences</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
 </header>
 <main id="cbot">
-<h1 id="cafe_bot">Cafe_Bot</h1>
-<p><img src="https://user-images.githubusercontent.com/83626443/118020079-91aed400-b30e-11eb-83ed-f88fa81dc51c.png" alt="Cafe Bot-logos"></p>
+<h1 id="cafe_bot" style="text-align: center; color: #82b8ff;">Cafe_Bot</h1>
+<p><img src="https://user-images.githubusercontent.com/83626443/118020079-91aed400-b30e-11eb-83ed-f88fa81dc51c.png" style="justify-content: center;"alt="Cafe Bot-logos"></p>
 <section style="color: #82b8ff; text-align: center;">
   <h2 id="motivation">Motivation</h2>
     <p>Our motivation to make this bot came from a small build-up of frustration at other discord bots. They only did specific things, and you had to add multiple of them to make a good server with good bots. A friend and I both shared this belief. We decided that we should make our own discord bot, to cure other people of this frustration. So, that&#39;s what we&#39;ve done! This is a combination of many attributes of many popular bots. Now, half your server-space doesn&#39;t get taken up by bots! You just have to add 1!</p>
