--- a/Cafe_Bot.html
+++ b/Cafe_Bot.html
@@ -64,8 +64,8 @@
   <h2 id="usage">Usage</h2>
     <p>Many of you that have come across this page, probably want to use this code for yourself. ⚡ NEWS FLASH ⚡, many people that just take things from a person&#39;s github and use it for themselves and they DON&#39;T GIVE CREDIT! If you want to us it properly, then you have to give credit to this github page, and all the contributors.</p>
     <p>Well, anyway, to use it, there will be certain things you will have to replace in your code, as well as required prerequisites (mentioned above), in order for the code to work properly.</p>
-    <p>First things first: You will need to create a bot from your discord developer portal:
-    <img src="https://user-images.githubusercontent.com/83626443/118029530-1bfc3580-b319-11eb-8452-48cf12541420.gif" alt="bot-token1"></p>
+    <p>First things first: You will need to create a bot from your discord developer portal:</p>
+    <p><img src="https://user-images.githubusercontent.com/83626443/118029530-1bfc3580-b319-11eb-8452-48cf12541420.gif" alt="bot-token1"></p>
     <p>Then, you need an API Key for PRSAW from <a href="https://api-info.pgamerx.com/register.html">PGamerX</a>. (Steps should be self explanatory.)</p>
     <p>Now, after these steps, this step can go 3 ways from here.</p>
     <p><a href="SECRETS.md">The 3 ways... (<strong>VERY</strong> IMPORTANT)</a></p>
