--- a/Cafe_Bot.html
+++ b/Cafe_Bot.html
@@ -24,7 +24,7 @@
 </header>
 <main id="cbot">
 <h1 id="cafe_bot" style="text-align: center; color: #82b8ff;">Cafe_Bot</h1>
-<p><img src="https://user-images.githubusercontent.com/83626443/118020079-91aed400-b30e-11eb-83ed-f88fa81dc51c.png" style="justify-content: center;"alt="Cafe Bot-logos"></p>
+<p><img src="https://user-images.githubusercontent.com/83626443/118020079-91aed400-b30e-11eb-83ed-f88fa81dc51c.png"alt="Cafe Bot-logos"></p>
 <section style="color: #82b8ff; text-align: center;">
   <h2 id="motivation">Motivation</h2>
     <p>Our motivation to make this bot came from a small build-up of frustration at other discord bots. They only did specific things, and you had to add multiple of them to make a good server with good bots. A friend and I both shared this belief. We decided that we should make our own discord bot, to cure other people of this frustration. So, that&#39;s what we&#39;ve done! This is a combination of many attributes of many popular bots. Now, half your server-space doesn&#39;t get taken up by bots! You just have to add 1!</p>
@@ -65,7 +65,7 @@
     <p>Many of you that have come across this page, probably want to use this code for yourself. ⚡ NEWS FLASH ⚡, many people that just take things from a person&#39;s github and use it for themselves and they DON&#39;T GIVE CREDIT! If you want to us it properly, then you have to give credit to this github page, and all the contributors.</p>
     <p>Well, anyway, to use it, there will be certain things you will have to replace in your code, as well as required prerequisites (mentioned above), in order for the code to work properly.</p>
     <p>First things first: You will need to create a bot from your discord developer portal:</p>
-    <p><img src="https://user-images.githubusercontent.com/83626443/118029530-1bfc3580-b319-11eb-8452-48cf12541420.gif" alt="bot-token1"></p>
+    <p><img src="https://user-images.githubusercontent.com/83626443/118029530-1bfc3580-b319-11eb-8452-48cf12541420.gif" alt="bot-token1" class="dumbotoken"></p>
     <p>Then, you need an API Key for PRSAW from <a href="https://api-info.pgamerx.com/register.html">PGamerX</a>. (Steps should be self explanatory.)</p>
     <p>Now, after these steps, this step can go 3 ways from here.</p>
     <p><a href="SECRETS.md">The 3 ways... (<strong>VERY</strong> IMPORTANT)</a></p>
