--- a/repos.html
+++ b/repos.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheet.css">
-    <title>Beta-Site</title>
+    <title>Repos</title>
   </head>
 <header>
     <div class="container">
@@ -24,7 +24,7 @@
 </header>
 <main id="repos">
   <h1 style="font-size: 6rem; color: #82b8ff;">
-    My Repositories
+    My Popular Repositories
   </h1>
   <section>
     <p><br>
@@ -41,6 +41,9 @@
         <img src="https://github-readme-stats.vercel.app/api/pin/?username=MilkshakeTheCoder&repo=milkshakethecoder.github.io&theme=react" class="Website"/>
     </a>
     </p>
+</section>
+<section>
+  <p>For more Repositories of mine, click <a href="https://github.com/MilkshakeTheCoder?tab=repositories">here.</a>For more information about my repositories, add the name of the repository after the main page (It is case sensitive!). Example: milkshakethecoder.github.io/Cafe_Bot/</p>
 </section>
 </main>
 <footer style="text-align: center; color: #82b8ff;">
