--- a/repos.html
+++ b/repos.html
@@ -43,7 +43,7 @@
     </p>
 </section>
 <section>
-  <p>For more Repositories of mine, click <a href="https://github.com/MilkshakeTheCoder?tab=repositories">here.</a>For more information about my repositories, add the name of the repository after the main page (It is case sensitive!). Example: milkshakethecoder.github.io/Cafe_Bot/</p>
+  <p style="color: #82b8ff;">For more Repositories of mine, click <a href="https://github.com/MilkshakeTheCoder?tab=repositories">here.</a>For more information about my repositories, add the name of the repository after the main page (It is case sensitive!). Example: milkshakethecoder.github.io/Cafe_Bot/</p>
 </section>
 </main>
 <footer style="text-align: center; color: #82b8ff;">
