--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
   </h1>
   <section>
     <p style="color: #82b8ff;"><br>
-        👋 Hi, My name is MilkshakeTheCoder. I am a rising ninth grader and I plan on majoring in software engineering. I love to code in lots of languages. As of right now, I'm working on developing Discord Bots and learning Python better as a whole. I like to take computers apart (my dad has tons of old unused computers) and put them back together. I love to install new operating systems and play around with all the possibilites with different distributions of linux. <br> <br> 
+        👋 Hi, My name is Aahil. I am a rising ninth grader and I plan on majoring in software engineering. I love to code in lots of languages. As of right now, I'm working on developing Discord Bots and learning Python better as a whole. I like to take computers apart (my dad has tons of old unused computers) and put them back together. I love to install new operating systems and play around with all the possibilites with different distributions of linux. <br> <br> 
 
         🗣 I also wanna learn other languages such as: C, JS, and a better knowledge of HTML/CSS. <br> <br> 
         
