--- a/links.html
+++ b/links.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheet.css">
-    <title>Contact</title>
+    <title>Links</title>
   </head>
 <header>
     <div class="container">
@@ -17,14 +17,14 @@
           <li><a href="about.html">About</a></li>
           <li><a href="repos.html">Repos</a></li>
           <li><a href="experiences.html">Experiences</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="links.html">Links</a></li>
         </ul>
       </nav>
     </div>
 </header>
-<main id="contact">
+<main id="links">
   <h1 style="font-size: 6rem; color: #82b8ff;">
-    Contact Me!
+    Links Me!
   </h1>
   <section>
     <h2 style="color:#82b8ff">Connect W/ Me!</h2>
