--- a/links.html
+++ b/links.html
@@ -24,12 +24,16 @@
 </header>
 <main id="links">
   <h1 style="font-size: 6rem; color: #82b8ff;">
-    Links Me!
+    Links!
   </h1>
   <section>
     <h2 style="color:#82b8ff">Connect W/ Me!</h2>
     <p style="display: flex; justify-content:center;"><br><a href="https://github.com/MilkshakeTheCoder"><img src="https://img.icons8.com/ios-filled/50/ffffff/github.png" class="github"/></a><a href="https://discord.gg/CtNTUX4znA"><img src="https://img.icons8.com/ios-filled/50/ffffff/discord-logo.png" class="discord"/></a> <a href="https://stackoverflow.com/users/15837152/aahil-py"><img src="https://img.icons8.com/ios-filled/50/ffffff/stackoverflow.png" class="stackoverflow"/></a></p>
-</section>
+  </section>
+  <section>
+    <h2 style="color:#82b8ff">Repo Information</h2>
+    <p style="display: flex; justify-content:center;"><br><a href="Cafe_Bot.html">Cafe_Bot</a></p>
+  </section>
 </main>
 <footer style="text-align: center; color: #82b8ff;">
   @Copyright MilkshakeTheCoder 2021 - All Right Reserved. 
