--- a/experiences.html
+++ b/experiences.html
@@ -27,7 +27,7 @@
     Languages and Experiences
   </h1>
   <section>
-    <p><br>
+    <!-- <p><br>
     <a href="https://mongodb.com">
         <img src="https://img.shields.io/badge/MongoDB-darkgreen?style=for-the-badge&logo=MongoDB&logoColor=white"/>
     </a>
@@ -52,8 +52,11 @@
     <a href="https://code.visualstudio.com//">
         <img src="https://img.shields.io/badge/VSCode-darkblue?style=for-the-badge&logo=visualstudiocode&logoColor=white"/>
     </a>
-    </p>
-</section>
+    </p> -->
+    <section>
+      <p style="color: darkgreen">MongoDB</p>
+    </section>
+  </section>
 </main>
 <footer style="text-align: center; color: #82b8ff;">
   @Copyright MilkshakeTheCoder 2021 - All Right Reserved. 
