--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous">
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="main.css">
     <title>About Me</title>
   </head>
 <header>
@@ -13,11 +13,11 @@
       <h1 class="logo"></h1>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="repos.html">Repos</a></li>
-          <li><a href="experiences.html">Experiences</a></li>
-          <li><a href="links.html">Links</a></li>
+          <li><a href="https://milkshakethecoder.github.io/index.html">Home</a></li>
+          <li><a href="https://milkshakethecoder.github.io/about.html">About</a></li>
+          <li><a href="https://milkshakethecoder.github.io/projects.html">Projects</a></li>
+          <li><a href="https://milkshakethecoder.github.io/experiences.html">Experiences</a></li>
+          <li><a href="https://milkshakethecoder.github.io/links.html">Links</a></li>
         </ul>
       </nav>
     </div>
