--- a/experiences.html
+++ b/experiences.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous">
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="main.css">
     <title>Experiences</title>
   </head>
 <header>
@@ -13,11 +13,11 @@
       <h1 class="logo"></h1>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="repos.html">Repos</a></li>
-          <li><a href="experiences.html">Experiences</a></li>
-          <li><a href="links.html">Links</a></li>
+          <li><a href="https://milkshakethecoder.github.io/index.html">Home</a></li>
+          <li><a href="https://milkshakethecoder.github.io/about.html">About</a></li>
+          <li><a href="https://milkshakethecoder.github.io/projects.html">Projects</a></li>
+          <li><a href="https://milkshakethecoder.github.io/experiences.html">Experiences</a></li>
+          <li><a href="https://milkshakethecoder.github.io/links.html">Links</a></li>
         </ul>
       </nav>
     </div>
@@ -27,7 +27,7 @@
     Languages and Experiences
   </h1>
   <section>
-    <!-- <p><br>
+    <p><br>
     <a href="https://mongodb.com">
         <img src="https://img.shields.io/badge/MongoDB-darkgreen?style=for-the-badge&logo=MongoDB&logoColor=white"/>
     </a>
@@ -52,10 +52,8 @@
     <a href="https://code.visualstudio.com//">
         <img src="https://img.shields.io/badge/VSCode-darkblue?style=for-the-badge&logo=visualstudiocode&logoColor=white"/>
     </a>
-    </p> -->
-    <section>
-      <p style="color: darkgreen">MongoDB</p>
-    </section>
+    </p>
+
   </section>
 </main>
 <footer style="text-align: center; color: #82b8ff;">
