semi-major rewrite added full for cafe_bot

--- a/Projects/Cafe_Bot.html
+++ b/Projects/Cafe_Bot.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous">
     <link rel="stylesheet" href="projects.css">
-    <title>About Me</title>
+    <title>Cafe_Bot</title>
   </head>
 <header>
     <div class="container">
@@ -51,7 +51,7 @@
             <p>A Suggestion System with Upvotes and Downvotes³</p>
             <p>A setchannel command where you can set certain channels in your server!³</p>
             <p>and much more!</p>
-            <p><a href="https://discord.com/oauth2/authorize?client_id=832409595791409242&amp;permissions=8&amp;scope=bot">Invite The Bot to Your Server!</a></p>
+            <p><a href="https://discord.com/oauth2/authorize?client_id=832409595791409242&amp;permissions=8&amp;scope=bot" style="color: #82b8ff;">Invite The Bot to Your Server!</a></p>
             <p>Inviting it would mean a ton to me, the main developer of this bot, to see it in a public server, so please add it! 😁</p>
         </section>
         <section>
@@ -67,9 +67,9 @@
             <p>Well, anyway, to use it, there will be certain things you will have to replace in your code, as well as required prerequisites (mentioned above), in order for the code to work properly.</p>
             <p>First things first: You will need to create a bot from your discord developer portal: <br> <br>
             <img src="https://user-images.githubusercontent.com/83626443/118029530-1bfc3580-b319-11eb-8452-48cf12541420.gif" alt="bot-token1" style="width:180vh;"></p>
-            <p>Then, you need an API Key for PRSAW from <a href="https://api-info.pgamerx.com/register.html">PGamerX</a>. (Steps should be self explanatory.)</p>
+            <p>Then, you need an API Key for PRSAW from <a href="https://api-info.pgamerx.com/register.html" style="color: #82b8ff;">PGamerX</a>. (Steps should be self explanatory.)</p>
             <p>Now, after these steps, this step can go 3 ways from here.</p>
-            <p><a href="SECRETS.md">The 3 ways... (<strong>VERY</strong> IMPORTANT)</a></p>
+            <p><a href="https://milkshakethecoder.github.io/Projects/CBOTSECRETS.html">The 3 ways... (<strong>VERY</strong> IMPORTANT)</a></p>
             <p>After that, there will be some [small things] to replace in the code, to make sure it still works.</p>
             <li>And that should be it for prerequisites and installations.</li>
         </section>
@@ -96,18 +96,18 @@
             <ul>
             <li>You should be free to run the code and have a fully functioning bot! If there are problems with our explanation and/code, please be sure to let us know in the discussion below! Also, be sure to join our server!</li>
             </ul>
-            <p><a href="https://discord.gg/CtNTUX4znA">Join our Discord Server!</a></p>
+            <p><a href="https://discord.gg/CtNTUX4znA" style="color: #82b8ff;">Join our Discord Server!</a></p>
         </section>
         <section style="text-align: center;">
             <h2 id="credits-and-acknowledgments">Credits and Acknowledgments</h2>
-            <p>Code With Swastik¹ ⠀⍿ ⠀<a href="https://github.com/CodeWithSwastik">Github</a> · <a href="https://www.youtube.com/c/CodeWithSwastik/featured">Youtube</a></p>
-            <p>MenuDocs² ⠀⍿ ⠀<a href="https://github.com/MenuDocs">Github</a> · <a href="https://www.youtube.com/channel/UCpGGFqJP9vYvzFudqnQ-6IA">Youtube</a></p>
-            <p>@pikaninja⁴ ⠀⍿ ⠀<a href="https://github.com/pikaninja">Github</a></p>
+            <p>Code With Swastik¹ ⠀⍿ ⠀<a href="https://github.com/CodeWithSwastik" style="color: #82b8ff;">Github</a> · <a href="https://www.youtube.com/c/CodeWithSwastik/featured" style="color: #82b8ff;">Youtube</a></p>
+            <p>MenuDocs² ⠀⍿ ⠀<a href="https://github.com/MenuDocs" style="color: #82b8ff;">Github</a> · <a href="https://www.youtube.com/channel/UCpGGFqJP9vYvzFudqnQ-6IA" style="color: #82b8ff;">Youtube</a></p>
+            <p>@pikaninja⁴ ⠀⍿ ⠀<a href="https://github.com/pikaninja" style="color: #82b8ff;">Github</a></p>
         </section>
         <section style="text-align: center;">
             <h2 id="fellow-coders-and-contributors-">Fellow Coders and Contributors³</h2>
-            <p>@MilkshakeTheCoder ⠀⍿ ⠀<a href="https://github.com/MilkshakeTheCoder">Github</a></p>
-            <p>@Andreawthederp ⠀⍿ ⠀<a href="https://github.com/andrewthederp">Github</a></p>
+            <p>@MilkshakeTheCoder ⠀⍿ ⠀<a href="https://github.com/MilkshakeTheCoder" style="color: #82b8ff;">Github</a></p>
+            <p>@Andreawthederp ⠀⍿ ⠀<a href="https://github.com/andrewthederp" style="color: #82b8ff;">Github</a></p>
         </section>
     </reposection>
 </main>
