--- a/links.html
+++ b/links.html
@@ -32,7 +32,7 @@
   </section>
   <section>
     <h2 style="color:#82b8ff">Repo Information</h2>
-    <p style="display: flex; justify-content:center;"><br><a href="https://milkshakethecoder.github.io/Projects/Cafe_Bot.html">Cafe_Bot</a></p>
+    <p style="display: flex; justify-content:center;"><br><a href="https://milkshakethecoder.github.io/Projects/Cafe_Bot.html" style="color: #82b8ff;">Cafe_Bot</a></p>
   </section>
 </main>
 <footer style="text-align: center; color: #82b8ff;">
