--- a/projects.html
+++ b/projects.html
@@ -225,7 +225,7 @@
         captionText.innerHTML = dots[slideIndex-1].alt;
       }
       </script>
-  <p style="color:#82b8ff; text-align: center;">Click on the Images for more information!</p>
+  <p>Click on the Images for more information!</p>
   </section>
   <section>
     <h2 style="color:#82b8ff">Popular Repositories</h2>
