forgot something stupid lol

--- a/Projects/Cafe_Bot.html
+++ b/Projects/Cafe_Bot.html
@@ -69,7 +69,7 @@
             <img src="https://user-images.githubusercontent.com/83626443/118029530-1bfc3580-b319-11eb-8452-48cf12541420.gif" alt="bot-token1" style="width:180vh;"></p>
             <p>Then, you need an API Key for PRSAW from <a href="https://api-info.pgamerx.com/register.html" style="color: #82b8ff;">PGamerX</a>. (Steps should be self explanatory.)</p>
             <p>Now, after these steps, this step can go 3 ways from here.</p>
-            <p><a href="https://milkshakethecoder.github.io/Projects/CBOTSECRETS.html">The 3 ways... (<strong>VERY</strong> IMPORTANT)</a></p>
+            <p><a href="https://milkshakethecoder.github.io/Projects/CBOTSECRETS.html" style="color: #82b8ff;">The 3 ways... (<strong>VERY</strong> IMPORTANT)</a></p>
             <p>After that, there will be some [small things] to replace in the code, to make sure it still works.</p>
             <li>And that should be it for prerequisites and installations.</li>
         </section>
