major minor details + rewrite

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
 </header>
 <main id="home">
   <img src="Images/milkshakethecoder.png" class="homeport" style="float: right;"/>
-  <h1>
+  <!-- <h1>
     MilkshakeTheCoder
+  </h1> -->
+  <h1>
+    <span id="header">H</span><span id="header">i</span><span id="header">!</span>
   </h1>
   <h2 style="font-size: 3rem; color: #82b8ff;">
     9th Grader, Programmer and Web Developer
@@ -43,6 +46,6 @@
   </div>
 </main>
 <footer style="text-align: center; color: #82b8ff; margin-top: 200px;">
-  @Copyright MilkshakeTheCoder 2021 - All Right Reserved. 
+  @Copyright MilkshakeTheCoder 2021 - All Right Reserved.
 </footer>
 </html>
