minor details experiences.html

--- a/experiences.html
+++ b/experiences.html
@@ -27,10 +27,8 @@
     Languages and Experiences
   </h1>
   <section>
+    <h2 style="color:#82b8ff">I've Worked With:</h2>
     <p><br>
-    <a href="https://mongodb.com">
-        <img src="https://img.shields.io/badge/MongoDB-darkgreen?style=for-the-badge&logo=MongoDB&logoColor=white"/>
-    </a>
     <a href="https://python.org">
         <img src="https://img.shields.io/badge/Python-darkblue?style=for-the-badge&logo=Python&logoColor=white"/>
     </a>
@@ -40,20 +38,37 @@
     <a href="https://www.w3.org/Style/CSS/Overview.en.html">
         <img src="https://img.shields.io/badge/CSS-blue?style=for-the-badge&logo=CSS3&logoColor=white"/>
     </a>
+    <a href="https://code.visualstudio.com//">
+      <img src="https://img.shields.io/badge/Javascript-yellow?style=for-the-badge&logo=javascript&logoColor=white"/>
+    </a>
+    <a href="https://code.visualstudio.com//">
+      <img src="https://img.shields.io/badge/Java-brown?style=for-the-badge&logo=java&logoColor=white"/>
+    </a>
+    <a href="https://code.visualstudio.com//">
+      <img src="https://img.shields.io/badge/Clang-blue?style=for-the-badge&logo=c&logoColor=white"/>
+    </a>
     <a href="https://linuxmint.com/">
         <img src="https://img.shields.io/badge/Linux Mint-green?style=for-the-badge&logo=LinuxMint&logoColor=white"/>
     </a>
     <a href="https://linux.org/">
         <img src="https://img.shields.io/badge/Ubuntu-purple?style=for-the-badge&logo=ubuntu&logoColor=white"/>
     </a>
+    <a href="https://code.visualstudio.com//">
+      <img src="https://img.shields.io/badge/VSCode-darkblue?style=for-the-badge&logo=visualstudiocode&logoColor=white"/>
+    </a>
     <a href="https://github.com/">
         <img src="https://img.shields.io/badge/Github-black?style=for-the-badge&logo=github&logoColor=white"/>
     </a>
+    <a href="https://mongodb.com">
+      <img src="https://img.shields.io/badge/MongoDB-darkgreen?style=for-the-badge&logo=MongoDB&logoColor=white"/>
+    </a>
     <a href="https://code.visualstudio.com//">
-        <img src="https://img.shields.io/badge/VSCode-darkblue?style=for-the-badge&logo=visualstudiocode&logoColor=white"/>
+      <img src="https://img.shields.io/badge/Discord.py-darkblue?style=for-the-badge&logo=discord&logoColor=white"/>
+    </a>
+    <a href="https://code.visualstudio.com//">
+      <img src="https://img.shields.io/badge/Raspberry Pi 3-red?style=for-the-badge&logo=raspberrypi&logoColor=white"/>
     </a>
     </p>
-
   </section>
 </main>
 <footer style="text-align: center; color: #82b8ff;">
