semi-major rewrite

--- a/Projects/Cafe_Bot.html
+++ b/Projects/Cafe_Bot.html
@@ -26,7 +26,7 @@
     <reposection>
         <section>
         <h1 id="cafe_bot" style="text-align: center;">Cafe_Bot</h1>
-        <img src="https://user-images.githubusercontent.com/83626443/118020079-91aed400-b30e-11eb-83ed-f88fa81dc51c.png" alt="Cafe Bot-logos" style="align-items: center;">
+        <img src="Imgs/Cafe_Bot.jpg" alt="Cafe Bot-logos" style="align-items: center;">
         </section>
         <section style="text-align: center;">
             <h2 id="motivation">Motivation</h2>
