--- a/about.html
+++ b/about.html
@@ -7,6 +7,17 @@
       crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
     <title>About Me</title>
+    <style type="text/css">
+      #header {
+        color: #82b8ff;
+        position: relative;
+        top: 0;
+        transition: top ease 0.4s;
+      }
+      #header:hover {
+        top: -10px;
+      }
+    </style>
   </head>
 <header>
     <div class="container">
@@ -23,8 +34,8 @@
     </div>
 </header>
 <main id="about">
-  <h1 style="font-size: 6rem; color: #82b8ff;">
-    About Me!
+  <h1>
+    <span id="header">A</span><span id="header">b</span><span id="header">o</span><span id="header">u</span><span id="header">t</span> <span id="header">M</span><span id="header">e</span><span id="header">!</span>
   </h1>
   <section>
     <p style="color: #82b8ff;"><br>
@@ -40,9 +51,9 @@
 
         👨‍🍳 I enjoy many cuisines and I am slowly learning to make foods from all of them. <br> <br> 
         
-        🐙 Most of my code will be posted on github, because I like uploading big projects there so other people can also see and learn from those. <br> <br> 
-        
-        I also just feel that open source projects are more reliable as compared to closed-source projects. Thanks for vising website page, be sure to explore the rest of the page, and have a great day!
+        🐙 Most of my code will be posted on github, because I like uploading big projects there so other people can also see and learn from those. I also just feel that open source projects are more reliable as compared to closed-source projects. <br> <br>
+
+        🔂 Please share this website with other people. Thanks for vising website page, be sure to explore the rest of the pages, and have a great day!
     </p>
   </section>
 </main>
