--- a/index.html
+++ b/index.html
@@ -2,11 +2,23 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge, chrome=1">
+    <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
     <title>Home</title>
+    <style type="text/css">
+      #header {
+        color: #82b8ff;
+        position: relative;
+        top: 0;
+        transition: top ease 0.4s;
+      }
+      #header:hover {
+        top: -10px;
+      }
+    </style>
   </head>
 <header>
     <div class="container">
@@ -24,11 +36,8 @@
 </header>
 <main id="home">
   <img src="Images/milkshakethecoder.png" class="homeport" style="float: right;"/>
-  <!-- <h1>
-    MilkshakeTheCoder
-  </h1> -->
   <h1>
-    <span id="header">H</span><span id="header">i</span><span id="header">!</span>
+    <span id="header">M</span><span id="header">i</span><span id="header">l</span><span id="header">k</span><span id="header">s</span><span id="header">h</span><span id="header">a</span><span id="header">k</span><span id="header">e</span><span id="header">T</span><span id="header">h</span><span id="header">e</span><span id="header">C</span><span id="header">o</span><span id="header">d</span><span id="header">e</span><span id="header">r</span>
   </h1>
   <h2 style="font-size: 3rem; color: #82b8ff;">
     9th Grader, Programmer and Web Developer
