--- a/links.html
+++ b/links.html
@@ -7,6 +7,17 @@
       crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
     <title>Links</title>
+    <style type="text/css">
+      #header {
+        color: #82b8ff;
+        position: relative;
+        top: 0;
+        transition: top ease 0.4s;
+      }
+      #header:hover {
+        top: -10px;
+      }
+    </style>
   </head>
 <header>
     <div class="container">
@@ -23,8 +34,8 @@
     </div>
 </header>
 <main id="links">
-  <h1 style="font-size: 6rem; color: #82b8ff;">
-    Links!
+  <h1>
+    <span id="header">L</span><span id="header">i</span><span id="header">n</span><span id="header">k</span><span id="header">s</span><span id="header">!</span>
   </h1>
   <section>
     <h2 style="color:#82b8ff">Connect W/ Me!</h2>
