--- a/experiences.html
+++ b/experiences.html
@@ -7,6 +7,17 @@
       crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
     <title>Experiences</title>
+    <style type="text/css">
+      #header {
+        color: #82b8ff;
+        position: relative;
+        top: 0;
+        transition: top ease 0.4s;
+      }
+      #header:hover {
+        top: -10px;
+      }
+    </style>
   </head>
 <header>
     <div class="container">
@@ -23,8 +34,8 @@
     </div>
 </header>
 <main id="experiences">
-  <h1 style="font-size: 6rem; color: #82b8ff;">
-    Languages and Experiences
+  <h1>
+    <span id="header">L</span><span id="header">a</span><span id="header">n</span><span id="header">g</span><span id="header">u</span><span id="header">a</span><span id="header">g</span><span id="header">e</span><span id="header">s</span> <span id="header">a</span><span id="header">n</span><span id="header">d</span> <span id="header">E</span><span id="header">x</span><span id="header">p</span><span id="header">e</span><span id="header">r</span><span id="header">i</span><span id="header">e</span><span id="header">n</span><span id="header">c</span><span id="header">e</span><span id="header">s</span><span id="header">!</span>
   </h1>
   <section>
     <h2 style="color:#82b8ff">I've Worked With:</h2>
@@ -50,7 +61,7 @@
     <a href="https://linuxmint.com/">
         <img src="https://img.shields.io/badge/Linux Mint-green?style=for-the-badge&logo=LinuxMint&logoColor=white"/>
     </a>
-    <a href="https://linux.org/">
+    <a href="https://ubuntu.com/">
         <img src="https://img.shields.io/badge/Ubuntu-purple?style=for-the-badge&logo=ubuntu&logoColor=white"/>
     </a>
     <a href="https://code.visualstudio.com//">
