--- a/experiences.html
+++ b/experiences.html
@@ -38,7 +38,7 @@
     <span id="header">L</span><span id="header">a</span><span id="header">n</span><span id="header">g</span><span id="header">u</span><span id="header">a</span><span id="header">g</span><span id="header">e</span><span id="header">s</span> <span id="header">a</span><span id="header">n</span><span id="header">d</span> <span id="header">E</span><span id="header">x</span><span id="header">p</span><span id="header">e</span><span id="header">r</span><span id="header">i</span><span id="header">e</span><span id="header">n</span><span id="header">c</span><span id="header">e</span><span id="header">s</span><span id="header">!</span>
   </h1>
   <section>
-    <h2 style="color:#82b8ff">I've Worked With:</h2>
+    <h2 style="color:#82b8ff">Programming Languages</h2>
     <p><br>
     <a href="https://python.org">
         <img src="https://img.shields.io/badge/Python-darkblue?style=for-the-badge&logo=Python&logoColor=white"/>
@@ -49,22 +49,24 @@
     <a href="https://www.w3.org/Style/CSS/Overview.en.html">
         <img src="https://img.shields.io/badge/CSS-blue?style=for-the-badge&logo=CSS3&logoColor=white"/>
     </a>
-    <a href="https://code.visualstudio.com//">
+    <a href="https://devdocs.io/javascript/">
       <img src="https://img.shields.io/badge/Javascript-yellow?style=for-the-badge&logo=javascript&logoColor=white"/>
     </a>
-    <a href="https://code.visualstudio.com//">
+    <a href="https://docs.oracle.com/en/java/">
       <img src="https://img.shields.io/badge/Java-brown?style=for-the-badge&logo=java&logoColor=white"/>
     </a>
-    <a href="https://code.visualstudio.com//">
+    <a href="https://docs.microsoft.com/en-us/cpp/c-language/?view=msvc-160">
       <img src="https://img.shields.io/badge/Clang-blue?style=for-the-badge&logo=c&logoColor=white"/>
     </a>
-    <a href="https://linuxmint.com/">
-        <img src="https://img.shields.io/badge/Linux Mint-green?style=for-the-badge&logo=LinuxMint&logoColor=white"/>
+    <a href="https://discordpy.readthedocs.io/en/stable/">
+      <img src="https://img.shields.io/badge/Discord.py-darkblue?style=for-the-badge&logo=discord&logoColor=white"/>
     </a>
-    <a href="https://ubuntu.com/">
-        <img src="https://img.shields.io/badge/Ubuntu-purple?style=for-the-badge&logo=ubuntu&logoColor=white"/>
-    </a>
-    <a href="https://code.visualstudio.com//">
+    </p>
+  </section>
+  <section>
+    <h2 style="color:#82b8ff">Applications</h2>
+    <p>
+    <a href="https://code.visualstudio.com/">
       <img src="https://img.shields.io/badge/VSCode-darkblue?style=for-the-badge&logo=visualstudiocode&logoColor=white"/>
     </a>
     <a href="https://github.com/">
@@ -73,10 +75,22 @@
     <a href="https://mongodb.com">
       <img src="https://img.shields.io/badge/MongoDB-darkgreen?style=for-the-badge&logo=MongoDB&logoColor=white"/>
     </a>
-    <a href="https://code.visualstudio.com//">
-      <img src="https://img.shields.io/badge/Discord.py-darkblue?style=for-the-badge&logo=discord&logoColor=white"/>
+    </p>
+  </section>
+  <section>
+    <h2 style="color:#82b8ff">Operating Systems</h2>
+    <p style="color:#82b8ff">
+    <a href="https://linuxmint.com/">
+        <img src="https://img.shields.io/badge/Linux Mint-green?style=for-the-badge&logo=LinuxMint&logoColor=white"/>
     </a>
-    <a href="https://code.visualstudio.com//">
+    I actually use Linux Mint as my default os. (I dual-booted it on my windows laptop.)
+    <a href="https://ubuntu.com/">
+        <img src="https://img.shields.io/badge/Ubuntu-purple?style=for-the-badge&logo=ubuntu&logoColor=white"/>
+    </a>
+    <a href="https://www.microsoft.com/en-us/windows/">
+      <img src="https://img.shields.io/badge/Windows-lightblue?style=for-the-badge&logo=windows10&logoColor=white"/>
+    </a>
+    <a href="https://www.raspberrypi.org/">
       <img src="https://img.shields.io/badge/Raspberry Pi 3-red?style=for-the-badge&logo=raspberrypi&logoColor=white"/>
     </a>
     </p>
