--- a/experiences.html
+++ b/experiences.html
@@ -79,7 +79,7 @@
   </section>
   <section>
     <h2 style="color:#82b8ff">Operating Systems</h2>
-    <p style="color:#82b8ff">
+    <p style="color:#82b8ff; justify-content: center; align-items: center;">
     <a href="https://linuxmint.com/">
         <img src="https://img.shields.io/badge/Linux Mint-green?style=for-the-badge&logo=LinuxMint&logoColor=white"/>
     </a>
@@ -87,7 +87,7 @@
         <img src="https://img.shields.io/badge/Ubuntu-purple?style=for-the-badge&logo=ubuntu&logoColor=white"/>
     </a>
     <a href="https://www.microsoft.com/en-us/windows/">
-      <img src="https://img.shields.io/badge/Windows-lightblue?style=for-the-badge&logo=windows10&logoColor=white"/>
+      <img src="https://img.shields.io/badge/Windows-blue?style=for-the-badge&logo=windows&logoColor=white"/>
     </a>
     <a href="https://www.raspberrypi.org/">
       <img src="https://img.shields.io/badge/Raspberry Pi 3-red?style=for-the-badge&logo=raspberrypi&logoColor=white"/>
