--- a/experiences.html
+++ b/experiences.html
@@ -92,6 +92,9 @@
     <a href="https://www.raspberrypi.org/">
       <img src="https://img.shields.io/badge/Raspberry Pi 3-red?style=for-the-badge&logo=raspberrypi&logoColor=white"/>
     </a>
+    <a href="https://pop.system76.com/">
+      <img src="https://img.shields.io/badge/Pop OS-pink?style=for-the-badge&logo=Pop!_OS&logoColor=white"/>
+    </a>
     <br>
     I actually use Linux Mint as my default os. (I dual-booted it on my windows laptop.)
     </p>
