updated experiences and projects

--- a/experiences.html
+++ b/experiences.html
@@ -35,7 +35,7 @@
 </header>
 <main id="experiences">
   <h1>
-    <span id="header">L</span><span id="header">a</span><span id="header">n</span><span id="header">g</span><span id="header">u</span><span id="header">a</span><span id="header">g</span><span id="header">e</span><span id="header">s</span> <span id="header">a</span><span id="header">n</span><span id="header">d</span> <span id="header">E</span><span id="header">x</span><span id="header">p</span><span id="header">e</span><span id="header">r</span><span id="header">i</span><span id="header">e</span><span id="header">n</span><span id="header">c</span><span id="header">e</span><span id="header">s</span><span id="header">!</span>
+    <span id="header">E</span><span id="header">x</span><span id="header">p</span><span id="header">e</span><span id="header">r</span><span id="header">i</span><span id="header">e</span><span id="header">n</span><span id="header">c</span><span id="header">e</span><span id="header">s</span><span id="header">!</span>
   </h1>
   <section>
     <h2 style="color:#82b8ff">Programming Languages</h2>
