--- a/experiences.html
+++ b/experiences.html
@@ -75,6 +75,15 @@
     <a href="https://mongodb.com">
       <img src="https://img.shields.io/badge/MongoDB-darkgreen?style=for-the-badge&logo=MongoDB&logoColor=white"/>
     </a>
+    <a href="https://atom.io/">
+      <img src="https://img.shields.io/badge/Atom-green?style=for-the-badge&logo=atom&logoColor=white"/>
+    </a>
+    <a href="https://www.sublimetext.com/">
+      <img src="https://img.shields.io/badge/Sublime Text-darkyellow?style=for-the-badge&logo=Sublime Text&logoColor=white"/>
+    </a>
+    <a href="https://www.mysql.com/">
+      <img src="https://img.shields.io/badge/MySQL-blue?style=for-the-badge&logo=MySQL&logoColor=white"/>
+    </a>
     </p>
   </section>
   <section>
