--- a/experiences.html
+++ b/experiences.html
@@ -84,6 +84,9 @@
     <a href="https://www.mysql.com/">
       <img src="https://img.shields.io/badge/MySQL-blue?style=for-the-badge&logo=MySQL&logoColor=white"/>
     </a>
+    <a href="https://www.libreoffice.org/">
+      <img src="https://img.shields.io/badge/LibreOffice-gray?style=for-the-badge&logo=LibreOffice&logoColor=white"/>
+    </a>
     </p>
   </section>
   <section>
