--- a/experiences.html
+++ b/experiences.html
@@ -79,7 +79,7 @@
       <img src="https://img.shields.io/badge/Atom-green?style=for-the-badge&logo=atom&logoColor=white"/>
     </a>
     <a href="https://www.sublimetext.com/">
-      <img src="https://img.shields.io/badge/Sublime Text-darkyellow?style=for-the-badge&logo=Sublime Text&logoColor=white"/>
+      <img src="https://img.shields.io/badge/Sublime Text-yellow?style=for-the-badge&logo=Sublime Text&logoColor=white"/>
     </a>
     <a href="https://www.mysql.com/">
       <img src="https://img.shields.io/badge/MySQL-blue?style=for-the-badge&logo=MySQL&logoColor=white"/>
