Updated css lots of cleanup and minor details

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <h1>
     <span id="header">M</span><span id="header">i</span><span id="header">l</span><span id="header">k</span><span id="header">s</span><span id="header">h</span><span id="header">a</span><span id="header">k</span><span id="header">e</span><span id="header">T</span><span id="header">h</span><span id="header">e</span><span id="header">C</span><span id="header">o</span><span id="header">d</span><span id="header">e</span><span id="header">r</span>
   </h1>
-  <h2 style="font-size: 3rem; color: #82b8ff;">
+  <h2 style="font-size: 3rem;">
     9th Grader, Programmer and Web Developer
   </h2>
   <div class="icons">
@@ -54,7 +54,7 @@
     </a>
   </div>
 </main>
-<footer style="text-align: center; color: #82b8ff; margin-top: 200px;">
+<footer style="text-align: center; margin-top: 200px;">
   @Copyright MilkshakeTheCoder 2021 - All Right Reserved.
 </footer>
 </html>
