--- a/experiences.html
+++ b/experiences.html
@@ -38,7 +38,7 @@
     <span id="header">E</span><span id="header">x</span><span id="header">p</span><span id="header">e</span><span id="header">r</span><span id="header">i</span><span id="header">e</span><span id="header">n</span><span id="header">c</span><span id="header">e</span><span id="header">s</span><span id="header">!</span>
   </h1>
   <section>
-    <h2 style="color:#82b8ff">Programming Languages</h2>
+    <h2>Programming Languages</h2>
     <p><br>
     <a href="https://python.org">
         <img src="https://img.shields.io/badge/Python-darkblue?style=for-the-badge&logo=Python&logoColor=white"/>
@@ -64,7 +64,7 @@
     </p>
   </section>
   <section>
-    <h2 style="color:#82b8ff">Applications</h2>
+    <h2>Applications</h2>
     <p>
     <a href="https://code.visualstudio.com/">
       <img src="https://img.shields.io/badge/VSCode-darkblue?style=for-the-badge&logo=visualstudiocode&logoColor=white"/>
@@ -90,8 +90,8 @@
     </p>
   </section>
   <section>
-    <h2 style="color:#82b8ff">Operating Systems</h2>
-    <p style="color:#82b8ff; justify-content: center; align-items: center;">
+    <h2>Operating Systems</h2>
+    <p style="justify-content: center; align-items: center;">
     <a href="https://linuxmint.com/">
         <img src="https://img.shields.io/badge/Linux Mint-green?style=for-the-badge&logo=LinuxMint&logoColor=white"/>
     </a>
@@ -113,7 +113,7 @@
     </p>
   </section>
 </main>
-<footer style="text-align: center; color: #82b8ff;">
+<footer style="text-align: center;">
   @Copyright MilkshakeTheCoder 2021 - All Right Reserved. 
 </footer>
 </html>
