--- a/links.html
+++ b/links.html
@@ -38,15 +38,15 @@
     <span id="header">L</span><span id="header">i</span><span id="header">n</span><span id="header">k</span><span id="header">s</span><span id="header">!</span>
   </h1>
   <section>
-    <h2 style="color:#82b8ff">Connect W/ Me!</h2>
+    <h2>Connect W/ Me!</h2>
     <p style="display: flex; justify-content:center;"><br><a href="https://github.com/MilkshakeTheCoder"><img src="https://img.icons8.com/ios-filled/50/ffffff/github.png" class="github"/></a><a href="https://discord.gg/CtNTUX4znA"><img src="https://img.icons8.com/ios-filled/50/ffffff/discord-logo.png" class="discord"/></a> <a href="https://stackoverflow.com/users/15837152/aahil-py"><img src="https://img.icons8.com/ios-filled/50/ffffff/stackoverflow.png" class="stackoverflow"/></a></p>
   </section>
   <section>
-    <h2 style="color:#82b8ff">Repo Information</h2>
+    <h2>Repo Information</h2>
     <p style="display: flex; justify-content:center;"><br><a href="https://milkshakethecoder.github.io/Projects/Cafe_Bot.html" style="color: #82b8ff;">Cafe_Bot</a></p>
   </section>
 </main>
-<footer style="text-align: center; color: #82b8ff;">
+<footer style="text-align: center;">
   @Copyright MilkshakeTheCoder 2021 - All Right Reserved. 
 </footer>
 </html>
