updated small image in projects

--- a/projects.html
+++ b/projects.html
@@ -180,7 +180,7 @@
     
       <div class="mySlides">
         <div class="numbertext">6 / 6</div>
-          <a href="https://github.com/MilkshakeTheCoder">
+          <a href="https://github.com/MilkshakeTheCoder/Learning-C">
             <img src="Projects/Imgs/Learning-C.jpg" style="width:100%; height:70%">
           </a>
         <h3 style="text-align: center;">Learning-C is a repository that teaches the basics of C.</h3>
