added guis in experiences and updated websites

--- a/experiences.html
+++ b/experiences.html
@@ -112,6 +112,25 @@
     I actually use Linux Mint as my default os. (I dual-booted it on my windows laptop.)
     </p>
   </section>
+  <section>
+    <h2>GUIs</h2>
+    <p style="justify-content: center; align-items: center;">
+    <a href="https://kde.org/">
+        <img src="https://img.shields.io/badge/KDE Plasma-purple?style=for-the-badge&logo=KDE&logoColor=white"/>
+    </a>
+    <a href="https://help.gnome.org/users/gnome-help/stable/gnome-classic.html.en#:~:text=GNOME%20Classic%20is%20a%20feature,the%20bottom%20of%20the%20screen.">
+      <img src="https://img.shields.io/badge/Gnome Classic-gray?style=for-the-badge&logo=GNOME&logoColor=white"/>
+    </a>
+    <a href="https://en.wikipedia.org/wiki/Cinnamon_(desktop_environment)#:~:text=Cinnamon%20is%20a%20free%20and,follows%20traditional%20desktop%20metaphor%20conventions.&text=With%20respect%20to%20its%20conservative,and%20GNOME%20Flashback)%20desktop%20environments.">
+      <img src="https://img.shields.io/badge/Cinnamon-brown?style=for-the-badge&logo=linux&logoColor=white"/>
+    </a>
+    <a href="https://mate-desktop.org/">
+      <img src="https://img.shields.io/badge/MATE-green?style=for-the-badge&logo=Material-UI&logoColor=white"/>
+    </a>
+    <a href="https://www.xfce.org/">
+      <img src="https://img.shields.io/badge/XFCE-lightblue?style=for-the-badge&logo=XFCE&logoColor=white"/>
+    </a>
+  </section>
 </main>
 <footer style="text-align: center;">
   @Copyright MilkshakeTheCoder 2021 - All Right Reserved. 
