--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
   </h1>
   <section>
     <h2>Who Am I?</h2>
-    <p><br>
+    <p>
         👋 Hi, My name is Aahil. I am a rising ninth grader and I plan on majoring in software engineering. I love to code in lots of languages. As of right now, I'm working on developing Discord Bots and learning Python better as a whole. I like to take computers apart (my dad has tons of old unused computers) and put them back together. I love to install new operating systems and play around with all the possibilites with different distributions of linux. <br>
     </p>
   </section>
@@ -61,8 +61,8 @@
   <section>
     <h2>Hobbies</h2>
     <p> 🎢 Some of my hobbies are: Coding (duh.), cooking, building legos, playing basketball, playing video games, and going out and meeting friends.
-    <br> 👀 I’m mainly interested in topics such as discord bots made in python, HTML/CSS, Python, Web-Hosting (on raspberry pi), Mongodb, Youtube, and Video Games. I’m currently learning how to make this cool website using css and html elements.</p>
-    <br> 👨‍🍳 I enjoy many cuisines and I am slowly learning to make foods from all of them.<br> 
+    <br> 👀 I’m mainly interested in topics such as discord bots made in python, HTML/CSS, Python, Web-Hosting (on raspberry pi), Mongodb, Youtube, and Video Games. I’m currently learning how to make this cool website using css and html elements.
+    <br> 👨‍🍳 I enjoy many cuisines and I am slowly learning to make foods from all of them.<br> </p>
   </section>
 </main>
 <footer style="text-align: center;">
