--- a/about.html
+++ b/about.html
@@ -39,13 +39,13 @@
   </h1>
   <section>
     <h2>Who Am I?</h2>
-    <p>
+    <p style="text-align: center;">
         👋 Hi, My name is Aahil. I am a rising ninth grader and I plan on majoring in software engineering. I love to code in lots of languages. As of right now, I'm working on developing Discord Bots and learning Python better as a whole. I like to take computers apart (my dad has tons of old unused computers) and put them back together. I love to install new operating systems and play around with all the possibilites with different distributions of linux. <br>
     </p>
   </section>
   <section>
     <h2>Contact</h2>
-    <p> 📬 How to reach me: Make an issue on one of my github repositories, or check the Connect W/ Me section in the <a href="https://milkshakethecoder.github.io/links.html" style="color: #82b8ff;">Links</a> tab.
+    <p style="text-align: center;"> 📬 How to reach me: Make an issue on one of my github repositories, or check the Connect W/ Me section in the <a href="https://milkshakethecoder.github.io/links.html" style="color: #82b8ff;">Links</a> tab.
     <br> 🔂 Please share this website with other people. Thanks for vising website page, be sure to explore the rest of the pages, and have a great day! 
     <br> 🐙 Most of my code will be posted on github, because I like uploading big projects there so other people can also see and learn from those. I also just feel that open source projects are more reliable as compared to closed-source projects. </p>
   </section>
@@ -60,7 +60,7 @@
   </section>
   <section>
     <h2>Hobbies</h2>
-    <p> 🎢 Some of my hobbies are: Coding (duh.), cooking, building legos, playing basketball, playing video games, and going out and meeting friends.
+    <p style="text-align: center;"> 🎢 Some of my hobbies are: Coding (duh.), cooking, building legos, playing basketball, playing video games, and going out and meeting friends.
     <br> 👀 I’m mainly interested in topics such as discord bots made in python, HTML/CSS, Python, Web-Hosting (on raspberry pi), Mongodb, Youtube, and Video Games. I’m currently learning how to make this cool website using css and html elements.
     <br> 👨‍🍳 I enjoy many cuisines and I am slowly learning to make foods from all of them.<br> </p>
   </section>
