--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" href="Images/milkshakethecoder.png">
+    <link rel="icon" href="Images/original.png">
     <title>Home</title>
     <style type="text/css">
       #header {
@@ -74,9 +74,9 @@
   </section>
 </div>
 
-<section class="about_section" id="about">
-  <div class="about_container">
-    <div class="about_card">
+<section class="general_section" id="about">
+  <div class="general_container">
+    <div class="general_card">
     <h1 style="text-align: center;">
       <span id="header">A</span><span id="header">b</span><span id="header">o</span><span id="header">u</span><span id="header">t</span> <span id="header">M</span><span id="header">e</span><span id="header">!</span>
     </h1>
@@ -103,9 +103,9 @@
     </div>
   </div>
 </section>
-<section class="about_section" id="exp">
-  <div class="about_container">
-    <div class="about_card">
+<section class="general_section" id="exp">
+  <div class="general_container">
+    <div class="general_card">
     <h1 style="text-align: center;">
       <span id="header">E</span><span id="header">x</span><span id="header">p</span><span id="header">e</span><span id="header">r</span><span id="header">i</span><span id="header">e</span><span id="header">n</span><span id="header">c</span><span id="header">e</span><span id="header">s</span><span id="header">!</span>
     </h1><br>
@@ -198,9 +198,9 @@
     </div>
   </div>
 </section>
-<section class="about_section" id="projects">
-  <div class="about_container">
-    <div class="about_card">
+<section class="general_section" id="projects">
+  <div class="general_container">
+    <div class="general_card">
       <h1 style="text-align: center;">
       <span id="header">P</span><span id="header">r</span><span id="header">o</span><span id="header">j</span><span id="header">e</span><span id="header">c</span><span id="header">t</span><span id="header">s</span><span id="header">!</span>
       </h1><br>
@@ -416,9 +416,9 @@
 </div>
 </div>
 </section>
-<section class="about_section" id="links">
-  <div class="about_container">
-    <div class="about_card">
+<section class="general_section" id="links">
+  <div class="general_container">
+    <div class="general_card">
 <h1 style="text-align: center; color: #82b8ff;">Repo Information</h1>
 <p style="display: flex; justify-content:center;"><br><a href="https://milkshakethecoder.github.io/Projects/Cafe_Bot.html" style="color: #82b8ff;">Cafe_Bot</a></p>
 </div>
