--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="Images/original.png">
-    <title>Home</title>
+    <title>MilkshakeTheCoder</title>
     <style type="text/css">
       #header {
         color: #82b8ff;
